--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,21 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wdth,wght,YTLC@0,6..12,75..125,200..1000,440..540;1,6..12,75..125,200..1000,440..540&family=Poetsen+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
 
-@layer base {
-    html {
-        font-family: "Nunito Sans", sans-serif;
-        font-optical-sizing: auto;
-        font-style: normal;
-        font-variation-settings:
-            "wdth" 100,
-            "YTLC" 500;
-    }
+* {
+    font-family: "Nunito Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
+
 
 
 .font-poetsen {
